--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ GITHUBACCESSTOKEN }}
+          password: ${{ secrets.GITHUBACCESSTOKEN }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1 
