--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,10 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: pfcho
-          environment_name: Pfcho-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-236655117972
+          application_name: pwcho_lab3
+          environment_name: Pwcholab3-env
+          existing_bucket_name: elasticbeanstalk-us-east-2-181435493551
           version_label: "docker-app-${{ steps.format-time.outputs.replaced }}"
-          region: us-east-1
+          region: us-east-2
           deployment_package: deploy.zip 
 
