--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,14 @@ jobs:
     name: Budowa i publikacja obrazw na repozytorium
     runs-on: ubuntu-latest
     steps:
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-single-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-single-buildx
+                
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -28,13 +36,32 @@ jobs:
           replace-with: '-'
           flags: 'g'     
 
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUBACCESSTOKEN }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Build and push to dockerhub
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./
           platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
-          file: ./dockerfile 
+          file: ./dockerfile
+          push: true
+          tags: |
+            mzradwan/aws:latest          
+            ghcr.io/mzradwan/aws:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new 
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
@@ -50,4 +77,9 @@ jobs:
           version_label: "docker-app-${{ steps.format-time.outputs.replaced }}"
           region: us-east-2
           deployment_package: deploy.zip 
+      
+      - name: Transporting cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
