--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,10 @@ jobs:
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
 
+      - name: Get Timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+        
       - name: Run String Replace
         uses: frabert/replace-string-action@master
         id: format-time
@@ -65,7 +69,7 @@ jobs:
           string: "${{ steps.current-time.outputs.time }}"
           replace-with: '-'
           flags: 'g'     
-          
+
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v20
         with:
